--- a/.github/workflows/run_nethermind.yml
+++ b/.github/workflows/run_nethermind.yml
@@ -1,8 +1,6 @@
 name: Run Nethermind Benchamarks
 
 on:
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
     inputs:
       how_many_runs:
@@ -34,7 +32,7 @@ jobs:
       run: make prepare
 
     - name: Run Python Script
-      run: python benchmarker.py --client nethermind --numberOfRuns ${{ github.event.inputs.how_many_runs }} --testsPath ${{ github.event.inputs.folder }}
+      run: python benchmarker.py --client nethermind --numberOfRuns ${{ github.event.inputs.how_many_runs }} --testsPath ${{ github.event.inputs.folder }} --dotnetPath /usr/share/dotnet
 
     - name: Zip the results folder
       run: zip -r results.zip results
