--- a/.github/workflows/run_nethermind.yml
+++ b/.github/workflows/run_nethermind.yml
@@ -13,13 +13,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DOTNET_INSTALL_DIR: "~/.dotnet"
     steps:
     - uses: actions/checkout@v4
 
     - uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-
     - name: Set up .NET
       uses: actions/setup-dotnet@v4
       with:
@@ -28,11 +29,11 @@ jobs:
     - name: Install python dependencies
       run: pip install -r requirements.txt
 
-    - name: Prepare dependencies
-      run: make prepare
+    - name: Prepare nethermind dependencies
+      run: make prepare_nethermind
 
     - name: Run Python Script
-      run: python benchmarker.py --client nethermind --numberOfRuns ${{ github.event.inputs.how_many_runs }} --testsPath ${{ github.event.inputs.folder }} --dotnetPath /usr/share/dotnet
+      run: python benchmarker.py --client nethermind --numberOfRuns ${{ github.event.inputs.how_many_runs }} --testsPath ${{ github.event.inputs.folder }} --dotnetPath ~/.dotnet/dotnet
 
     - name: Zip the results folder
       run: zip -r results.zip results
