--- a/.github/workflows/run_nethermind.yml
+++ b/.github/workflows/run_nethermind.yml
@@ -33,7 +33,7 @@ jobs:
       run: make prepare_nethermind
 
     - name: Run Python Script
-      run: python benchmarker.py --client nethermind --numberOfRuns ${{ github.event.inputs.how_many_runs }} --testsPath ${{ github.event.inputs.folder }} --dotnetPath ~/.dotnet/dotnet
+      run: python benchmarker.py --client nethermind --numberOfRuns ${{ github.event.inputs.how_many_runs }} --testsPath /home/runner/work/gas-benchmarks/gas-benchmarks/${{ github.event.inputs.folder }} --dotnetPath ~/.dotnet/dotnet
 
     - name: Zip the results folder
       run: zip -r results.zip results
