feat: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Repos folder
-./nethermind/
-./geth/
-./reth/
+/nethermind/
+/geth/
+/reth/
 
 # Default results folder
-results/
+/results/
 
 # Others
 .idea/
- __pycache__/
+/__pycache__/
