--- a/.github/workflows/kute.yml
+++ b/.github/workflows/kute.yml
@@ -4,12 +4,11 @@ on:
   workflow_dispatch:
     inputs:
       test:
-        description: 'Path to'
+        description: 'Path to test file'
         default: 'tests/req8.txt'
       warmup:
-        description: 'Name of the client'
-        required: true
-        default: 'nethermind'
+        description: 'Name of the warm up file'
+        default: ''
         type: choice
         options:
           - warmup/warmup-100bl-16wi-32tx.txt
