debug: testing action

--- a/.github/workflows/kute_multi.yml
+++ b/.github/workflows/kute_multi.yml
@@ -17,6 +17,7 @@ on:
           - warmup/warmup-1000bl-16wi-1000tx.txt
       client:
         description: 'Comma-separated list of client names (e.g., nethermind,reth,geth,erigon)'
+        default: 'nethermind'
         required: true
       images:
         description: 'Comma-separated list of images for the clients (type 'default' if you don't want to specify), same order than clients'
