--- a/.github/workflows/kute_multi.yml
+++ b/.github/workflows/kute_multi.yml
@@ -23,6 +23,9 @@ on:
         description: 'Number of runs for the application'
         required: false
         default: 1
+      images:
+        description: 'Comma-separated list of images for the clients (e.g., default,custom1,custom2)'
+        default: 'default'
 
 jobs:
   build:
