--- a/scripts/reth/docker-compose.yaml
+++ b/scripts/reth/docker-compose.yaml
@@ -1,24 +1,24 @@
 version: "3.9"
 services:
   execution-sync:
-    container_name: execution-client-sync
+    container_name: gas-execution-client-sync
     image: ${EC_IMAGE_VERSION}
     networks:
-    - kute
+    - gas
     volumes:
     - ${EC_DATA_DIR}:/var/lib/reth
     - ${GENESIS_PATH}:/tmp/genesis/genesis.json
     entrypoint: /usr/local/bin/reth init --datadir /var/lib/reth --chain /tmp/genesis/genesis.json
   execution:
     stop_grace_period: 30m
-    container_name: execution-client
+    container_name: gas-execution-client
     depends_on:
       execution-sync:
         condition: service_completed_successfully
     restart: unless-stopped
     image: ${EC_IMAGE_VERSION}
     networks:
-    - kute
+    - gas
     volumes:
     - ${EC_DATA_DIR}:/var/lib/reth
     - ${GENESIS_PATH}:/tmp/genesis/genesis.json
@@ -53,5 +53,5 @@ services:
         max-size: 10m
         max-file: "10"
 networks:
-  kute:
-    name: kute-network
+  gas:
+    name: gas-network
