--- a/scripts/erigon/docker-compose.yaml
+++ b/scripts/erigon/docker-compose.yaml
@@ -2,10 +2,10 @@ version: "3.9"
 services:
   execution-sync:
     user: "root:root"
-    container_name: sedge-execution-client-sync
+    container_name: gas-execution-client-sync
     image: ${EC_IMAGE_VERSION}
     networks:
-    - kute
+    - gas
     volumes:
     - ${EC_DATA_DIR}:/var/lib/erigon
     - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
@@ -14,14 +14,14 @@ services:
   execution:
     user: "root:root"
     stop_grace_period: 30m
-    container_name: sedge-execution-client
+    container_name: gas-execution-client
     depends_on:
       execution-sync:
         condition: service_completed_successfully
     restart: unless-stopped
     image: ${EC_IMAGE_VERSION}
     networks:
-    - kute
+    - gas
     volumes:
     - ${EC_DATA_DIR}:/var/lib/erigon
     - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
@@ -57,5 +57,5 @@ services:
         max-size: 10m
         max-file: "10"
 networks:
-  kute:
-    name: kute-network
+  gas:
+    name: gas-network
