--- a/scripts/nethermind/docker-compose.yaml
+++ b/scripts/nethermind/docker-compose.yaml
@@ -6,11 +6,11 @@ services:
     - TERM=xterm-256color
     - COLORTERM=truecolor
     stop_grace_period: 30s
-    container_name: kute-execution-client
+    container_name: gas-execution-client
     restart: unless-stopped
     image: ${EC_IMAGE_VERSION}
     networks:
-    - kute
+    - gas
     volumes:
     - ${EC_DATA_DIR}:/nethermind/data
     - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
@@ -35,7 +35,6 @@ services:
     - --JsonRpc.JwtSecretFile=/tmp/jwt/jwtsecret
     - --JsonRpc.EngineHost=0.0.0.0
     - --JsonRpc.EnginePort=8551
-    - --JsonRpc.RpcRecorderState=all
     - --Network.DiscoveryPort=30304
     - --HealthChecks.Enabled=true
     - --Metrics.Enabled=true
@@ -48,5 +47,5 @@ services:
         max-size: 10m
         max-file: "10"
 networks:
-  kute:
-    name: kute-network
+  gas:
+    name: gas-network
