--- a/.github/workflows/kute_multi.yml
+++ b/.github/workflows/kute_multi.yml
@@ -81,8 +81,8 @@ jobs:
             done
           done
 
-#      - name: Get metrics from results
-#        run: python results.py --resultsPath results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }}
+      - name: Get metrics from results
+        run: python results.py --resultsPath results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }}
 
       - name: Zip the results folder
         run: zip -r results.zip results
