--- a/.github/workflows/kute_multi_self.yml
+++ b/.github/workflows/kute_multi_self.yml
@@ -32,6 +32,7 @@ jobs:
     runs-on: [self-hosted, gas]
     env:
       DOTNET_INSTALL_DIR: "~/.dotnet"
+      HOME: "/root"
     steps:
       - uses: actions/checkout@v4
 
