selfhosted without results

--- a/.github/workflows/kute_multi_self.yml
+++ b/.github/workflows/kute_multi_self.yml
@@ -83,8 +83,8 @@ jobs:
             done
           done
 
-      - name: Get metrics from results
-        run: python results_2.py --resultsPath results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }}
+#      - name: Get metrics from results
+#        run: python results_2.py --resultsPath results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }}
 
       - name: Zip the results folder
         run: zip -r results.zip results
