--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -76,29 +76,63 @@ jobs:
           IFS=',' read -ra images <<< "${{ github.event.inputs.images }}"
           run="${{ matrix.run }}"
           test_path="${{ github.event.inputs.test }}"
+          
           for test_dir in "$test_path"/*/; do
-            for i in "${!clients[@]}"; do
-              client="${clients[$i]}"
-              image="${images[$i]}"
-              if [ -z "$image" ]; then
-                echo "Image input is empty, using default image."
-                python setup_node.py --client $client
+            if [ -d "$test_dir" ]; then
+              subdirs=("$test_dir"/*/)
+              if [ ${#subdirs[@]} -gt 0 ]; then
+                echo "$test_dir has subdirectories"
+                # Iterate over each subdirectory
+                for subdir in "$test_dir"/*/; do
+                  for i in "${!clients[@]}"; do
+                    client="${clients[$i]}"
+                    image="${images[$i]}"
+                    if [ -z "$image" ]; then
+                      echo "Image input is empty, using default image."
+                      python setup_node.py --client $client
+                    else
+                      echo "Using provided image: $image for $client"
+                      python setup_node.py --client $client --image $image
+                    fi
+                    if [ -z "${{ github.event.inputs.warmup }}" ]; then
+                      echo "Running script without warm up."
+                      python3 run_kute.py --output results --testsPath "$subdir" --jwtPath /tmp/jwtsecret --client $client --run $run
+                    else
+                      echo "Using provided warm up file: ${{ github.event.inputs.warmup }}"
+                      python3 run_kute.py --output results --testsPath "$subdir" --jwtPath /tmp/jwtsecret --warmupPath ${{ github.event.inputs.warmup }} --client $client --run $run
+                    fi
+                    cd "scripts/$client"
+                    docker-compose down
+                    sudo rm -rf execution-data
+                    cd ../..
+                  done
+                done
               else
-                echo "Using provided image: $image for $client"
-                python setup_node.py --client $client --image $image
+                echo "$test_dir does not have subdirectories"
+                for i in "${!clients[@]}"; do
+                  client="${clients[$i]}"
+                  image="${images[$i]}"
+                  if [ -z "$image" ]; then
+                    echo "Image input is empty, using default image."
+                    python setup_node.py --client $client
+                  else
+                    echo "Using provided image: $image for $client"
+                    python setup_node.py --client $client --image $image
+                  fi
+                  if [ -z "${{ github.event.inputs.warmup }}" ]; then
+                    echo "Running script without warm up."
+                    python3 run_kute.py --output results --testsPath "$test_dir" --jwtPath /tmp/jwtsecret --client $client --run $run
+                  else
+                    echo "Using provided warm up file: ${{ github.event.inputs.warmup }}"
+                    python3 run_kute.py --output results --testsPath "$test_dir" --jwtPath /tmp/jwtsecret --warmupPath ${{ github.event.inputs.warmup }} --client $client --run $run
+                  fi
+                  cd "scripts/$client"
+                  docker-compose down
+                  sudo rm -rf execution-data
+                  cd ../..
+                done
               fi
-              if [ -z "${{ github.event.inputs.warmup }}" ]; then
-                echo "Running script without warm up."
-                python3 run_kute.py --output results --testsPath "$test_dir" --jwtPath /tmp/jwtsecret --client $client --run $run
-              else
-                echo "Using provided warm up file: ${{ github.event.inputs.warmup }}"
-                python3 run_kute.py --output results --testsPath "$test_dir" --jwtPath /tmp/jwtsecret --warmupPath ${{ github.event.inputs.warmup }} --client $client --run $run
-              fi
-              cd "scripts/$client"
-              docker-compose down
-              sudo rm -rf execution-data
-              cd ../..
-            done
+            fi
           done
 
       - name: Zip the results folder
