--- a/.github/workflows/kute.yml
+++ b/.github/workflows/kute.yml
@@ -49,7 +49,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Prepare kute dependencies
-        run: make prepare_nethermind
+        run: make prepare_tools
 
       - name: Create results directory
         run: mkdir results_${{ github.event.inputs.client}}
