--- a/.github/workflows/kute_multi.yml
+++ b/.github/workflows/kute_multi.yml
@@ -47,7 +47,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Prepare kute dependencies
-        run: make prepare_nethermind
+        run: make prepare_tools
 
       - name: Create results directory
         run: mkdir results
