--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -65,7 +65,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Prepare kute dependencies
-        run: make prepare_nethermind
+        run: make prepare_tools
 
       - name: Create results directory
         run: mkdir results
