--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -68,58 +68,61 @@ jobs:
         run: make prepare_tools
 
       - name: Create results directory
-        run: mkdir results
+        run: | 
+          mkdir results
+          touch results/test.txt
+      
 
-      - name: List leaf directories
-        run: |
-          # Define the directory to search
-          PARENT_DIR="tests/"
-          
-          # Find directories that do not contain subdirectories
-          LEAF_DIRS=$(find "$PARENT_DIR" -type d | while read -r dir; do
-            if [ -z "$(find "$dir" -mindepth 1 -maxdepth 1 -type d)" ]; then
-              echo "$dir"
-            fi
-          done)
-          
-          # Join directories with a delimiter (newline)
-          LEAF_DIRS=$(printf "%s\n" "$LEAF_DIRS")
-          
-          # Export the variable for the next steps
-          echo "LEAF_DIRS<<EOF" >> $GITHUB_ENV
-          echo "$LEAF_DIRS" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+#      - name: List leaf directories
+#        run: |
+#          # Define the directory to search
+#          PARENT_DIR="tests/"
+#
+#          # Find directories that do not contain subdirectories
+#          LEAF_DIRS=$(find "$PARENT_DIR" -type d | while read -r dir; do
+#            if [ -z "$(find "$dir" -mindepth 1 -maxdepth 1 -type d)" ]; then
+#              echo "$dir"
+#            fi
+#          done)
+#
+#          # Join directories with a delimiter (newline)
+#          LEAF_DIRS=$(printf "%s\n" "$LEAF_DIRS")
+#
+#          # Export the variable for the next steps
+#          echo "LEAF_DIRS<<EOF" >> $GITHUB_ENV
+#          echo "$LEAF_DIRS" >> $GITHUB_ENV
+#          echo "EOF" >> $GITHUB_ENV
 
-      - name: Run Node and run benchmarks
-        run: |
-          IFS=',' read -ra clients <<< "${{ github.event.inputs.client }}"
-          IFS=',' read -ra images <<< "${{ github.event.inputs.images }}"
-          run="${{ matrix.run }}"
-          test_path="${{ github.event.inputs.test }}"
-          
-          for test_dir in $LEAF_DIRS; do
-            for i in "${!clients[@]}"; do
-              client="${clients[$i]}"
-              image="${images[$i]}"
-              if [ -z "$image" ]; then
-                python setup_node.py --client $client
-              else
-                echo "Using provided image: $image for $client"
-                python setup_node.py --client $client --image $image
-              fi
-              if [ -z "${{ github.event.inputs.warmup }}" ]; then
-                echo "Running script without warm up."
-                python3 run_kute.py --output results --testsPath "$test_dir" --jwtPath /tmp/jwtsecret --client $client --run $run
-              else
-                echo "Using provided warm up file: ${{ github.event.inputs.warmup }}"
-                python3 run_kute.py --output results --testsPath "$test_dir" --jwtPath /tmp/jwtsecret --warmupPath ${{ github.event.inputs.warmup }} --client $client --run $run
-              fi
-              cd "scripts/$client"
-              docker-compose down
-              sudo rm -rf execution-data
-              cd ../..
-            done
-          done
+#      - name: Run Node and run benchmarks
+#        run: |
+#          IFS=',' read -ra clients <<< "${{ github.event.inputs.client }}"
+#          IFS=',' read -ra images <<< "${{ github.event.inputs.images }}"
+#          run="${{ matrix.run }}"
+#          test_path="${{ github.event.inputs.test }}"
+#
+#          for test_dir in $LEAF_DIRS; do
+#            for i in "${!clients[@]}"; do
+#              client="${clients[$i]}"
+#              image="${images[$i]}"
+#              if [ -z "$image" ]; then
+#                python setup_node.py --client $client
+#              else
+#                echo "Using provided image: $image for $client"
+#                python setup_node.py --client $client --image $image
+#              fi
+#              if [ -z "${{ github.event.inputs.warmup }}" ]; then
+#                echo "Running script without warm up."
+#                python3 run_kute.py --output results --testsPath "$test_dir" --jwtPath /tmp/jwtsecret --client $client --run $run
+#              else
+#                echo "Using provided warm up file: ${{ github.event.inputs.warmup }}"
+#                python3 run_kute.py --output results --testsPath "$test_dir" --jwtPath /tmp/jwtsecret --warmupPath ${{ github.event.inputs.warmup }} --client $client --run $run
+#              fi
+#              cd "scripts/$client"
+#              docker-compose down
+#              sudo rm -rf execution-data
+#              cd ../..
+#            done
+#          done
 
       - name: Zip the results folder
         run: |
@@ -138,23 +141,20 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Download all results
-        run: |
-          mkdir combined-results
-          for i in $(seq 1 ${{ github.event.inputs.runs }}); do
-            run=$i
-            echo "Downloading results-${run}.zip"
-            gh run download --name results-${run}.zip --dir combined-results
-          done
+      - uses: actions/download-artifact@v4
+      - name: Display structure of downloaded files
+        run: ls -R
 
       - name: Extract all result files
         run: |
           for file in combined-results/*.zip; do
             unzip -o "$file" -d combined-results
           done
-      - name: Process combined results
-        run: |
-          python results_2.py --resultsPath combined-results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }}
+      - name: List all extracted files
+        run: ls -R combined-results
+#      - name: Process combined results
+#        run: |
+#          python results_2.py --resultsPath combined-results --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }}
 
       - name: Upload combined results as artifact
         uses: actions/upload-artifact@v4
