--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -127,7 +127,15 @@ jobs:
       - name: Zip the results folder
         run: |
           CLEANED_RUN=$(echo "${{ matrix.run }}" | tr -d '\n')
+          echo "CLEANED_RUN<<EOF" >> $GITHUB_ENV
+          echo "$CLEANED_RUN" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
           zip -r results-${CLEANED_RUN}.zip results
+      - name: Upload results as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: results
+          path: results-${CLEANED_RUN}.zip
   combine-results:
     needs: build
     runs-on: ubuntu-latest
