--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -61,11 +61,11 @@ jobs:
         with:
           dotnet-version: "8.0.x"
 
-      - name: Install python dependencies
-        run: pip install -r requirements.txt
-
-      - name: Prepare kute dependencies
-        run: make prepare_tools
+#      - name: Install python dependencies
+#        run: pip install -r requirements.txt
+#
+#      - name: Prepare kute dependencies
+#        run: make prepare_tools
 
       - name: Create results directory
         run: | 
@@ -148,10 +148,13 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+      - uses: actions/download-artifact@v3
+        with:
+          name: results-*
+          path: combined-results
 
-      - uses: actions/download-artifact@v4
       - name: Display structure of downloaded files
-        run: ls -R
+        run: ls -R combined-results
 
       - name: Extract all result files
         run: |
