--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -137,7 +137,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: results-${{ env.CLEANED_RUN }}.zip
+          name: results-${{ env.CLEANED_RUN }}
           path: results-${{ env.CLEANED_RUN }}.zip
   combine-results:
     needs: build
@@ -155,6 +155,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           path: combined-results
+          merge-multiple: true
 
       - name: Display structure of downloaded files
         run: ls -R combined-results
